# jsonc-parser

./: .dprintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  dprint.json  result.txt
.github/: SECURITY.md  contributing.md
.github/workflows/: ci.yml  release.yml
benches/: bench.rs  json_speed.rs
benches/data/: package.json
benches/json/: 3M.json
dev/bench/: data.js
examples/: json.rs
src/: ast.rs  common.rs  cst.rs  errors.rs  lib.rs  map.rs  parse_to_ast.rs  parse_to_value.rs  parser.rs  scanner.rs  serde.rs  string.rs  tokens.rs  types.rs  value.rs
src/cst/: input.rs  mod.rs
tests/: test.rs
tests/specs/array/: array.json  array.txt  empty-array.txt  trailing_comma.txt
tests/specs/comments/: inline-comments.json  inline-comments.txt  only-comments.json  only-comments.txt
tests/specs/encoding/: encoding.json  encoding.txt
tests/specs/object/: empty-object.txt  non-string-prop-names.json  non-string-prop-names.txt  object.json  object.txt  trailing_comma.json  trailing_comma.txt
tests/specs/string/: string.json  string.txt
