[package]
name = "jsonc-parser"
version = "0.23.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
license = "MIT"
description = "JSONC parser."
repository = "https://github.com/dprint/jsonc-parser"

[dependencies]
indexmap = { version = "2.0.2", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
preserve_order = ["indexmap", "serde_json/preserve_order"]
serde = ["serde_json"]

[dev-dependencies]
pretty_assertions = "1.0.0"
